--- a/.github/workflows/main_pdf-intelligent-scanner.yml
+++ b/.github/workflows/main_pdf-intelligent-scanner.yml
@@ -21,19 +21,21 @@ jobs:
       - name: Set up Node.js version
         uses: actions/setup-node@v3
         with:
-          node-version: '22.x'
+          node-version: '18.x'
+          cache: 'npm'
 
-      - name: npm install, build, and test
+      - name: npm install and build
+        env:
+          CI: false
         run: |
           npm install
-          npm run build --if-present
-          npm run test --if-present
-
+          npm run build
+          
       - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v3
         with:
           name: node-app
-          path: .
+          path: dist
 
   deploy:
     runs-on: ubuntu-latest
@@ -51,9 +53,7 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_0BFCBC0BE33F4202A79D236928AB2969 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_965E5D2233554AF6BF5A9567EBE51A9F }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_71EFEC6E3634460EA17B4A88E2D484C7 }}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
