--- a/.github/workflows/main_pdf-intelligent-scanner.yml
+++ b/.github/workflows/main_pdf-intelligent-scanner.yml
@@ -32,10 +32,11 @@ jobs:
           npm run build
           
       - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: node-app
           path: dist
+          retention-days: 1
 
   deploy:
     runs-on: ubuntu-latest
