--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://amanraj9910.github.io/Hosho-Al-Pdf-main/",
+  "homepage": ".",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
