--- a/.github/workflows/main_pdf-intelligent-scanner.yml
+++ b/.github/workflows/main_pdf-intelligent-scanner.yml
@@ -62,4 +62,5 @@ jobs:
           app-name: 'pdf-intelligent-scanner'
           slot-name: 'Production'
           package: .
+          startup-command: "pm2 serve /home/site/wwwroot --no-daemon --spa"
           
