--- a/.github/workflows/main_pdf-intelligent-scanner.yml
+++ b/.github/workflows/main_pdf-intelligent-scanner.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy Node.js app to Azure Web App - pdf-intelligent-scanner
 
 on:
@@ -13,7 +10,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read #This is required for actions/checkout
+      contents: read
 
     steps:
       - uses: actions/checkout@v4
@@ -22,12 +19,19 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '22.x'
+          cache: 'npm'
 
       - name: npm install, build, and test
         run: |
           npm install
           npm run build --if-present
           npm run test --if-present
+        env:
+          # Add your environment variables here for build time
+          VITE_AZURE_FORM_RECOGNIZER_ENDPOINT: ${{ secrets.VITE_AZURE_FORM_RECOGNIZER_ENDPOINT }}
+          VITE_AZURE_FORM_RECOGNIZER_KEY: ${{ secrets.VITE_AZURE_FORM_RECOGNIZER_KEY }}
+          VITE_GPT_API_KEY: ${{ secrets.VITE_GPT_API_KEY }}
+          # Add any other VITE_ environment variables you need
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -39,8 +43,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
+      id-token: write
+      contents: read
 
     steps:
       - name: Download artifact from build job
@@ -63,4 +67,3 @@ jobs:
           slot-name: 'Production'
           package: .
           startup-command: "pm2 serve /home/site/wwwroot --no-daemon --spa"
-          
